Somewhat ready for public posting. Registered URL anyways.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,31 @@
 	<body>
 		  <div id="header">Jonathan Stewart</div>
 		  
-			Blurb about self.
+			<hr />
+			
+   			<div id="navigation">
+       		<a href="index.html">Home</a>
+       		<a href="contact.html">Contact</a>
+       		<a href="projects.html">Projects</a>
+       	</div>
+			
+			<hr />
+			
+			<div id="content">
+				I graduated from <a href="http://www.valdosta.edu/">Valdosta State University</a> with a B.S. in Computer Information Systems<br/>
+				and now work as an electrical apprentice for <a href="http://www.inglett-stubbs.com/">Inglett & Stubbs</a>. This change of career path<br />
+				hasn't lessened my interest in software development in the slightest. Here, and on <a href="https://github.com/JonathanJamesStewart">GitHub</a> is<br />
+				where I intend on posting my projects.
+			</div>
+			
+			<div id="footer">
+				<hr />
 		  
-		  <div id="footer">
-				<a href="index.html">Home</a>
-		  	<a href="contact.html">Contact</a>
-				<a href="projects.html">Projects</a>
-		  </div>
+    		 	<div id="navigation">
+    				<a href="index.html">Home</a>
+    		 		<a href="contact.html">Contact</a>
+    				<a href="projects.html">Projects</a>
+    		 	</div>
+			</div>
 	</body>
 </html>
