--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>JS Contact</title>
+		<title>JS Projects</title>
 		<link href="styles.css" rel="stylesheet" >
 	</head>
 	<body>
@@ -17,11 +17,14 @@
 			<hr />
 			
 			<div id="content">
-				<ul>
-					<li><a href="mailto:jonathanstewart@jonathanstewart.net" subject="Contact From Website">E-Mail</a></li>
-					<li><a href="https://github.com/jonathanjamesstewart">GitHub</a></li>
-					<li><a href="https://www.linkedin.com/in/jonathanjamesstewart">LinkedIn</a>
-				</ul>
+				<table align="center">
+					<tr>
+						<td>
+							<a title="Eve Market Scanner" href="https://github.com/JonathanJamesStewart/EveMarketScanner"><img src="Images/Eve Project.jpg" /></a>
+							<a title="This Website" href="https://github.com/JonathanJamesStewart/JJSWebsite"><img src="Images/Website.jpg"/></a>
+						</td>
+					</tr>
+				</table>
 			</div>
 			
 			<div id="footer">
