Created tictactoe page. Init tictactoe.js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 			<hr />
 			
 			<div id="content">
+			
+				<div>
+					<script src="JS/Greeting.js"></script><br />
+				</div>
+				
 				I graduated from <a href="http://www.valdosta.edu/">Valdosta State University</a> with a B.S. in Computer Information Systems<br/>
 				and now work as an electrical apprentice for <a href="http://www.inglett-stubbs.com/">Inglett & Stubbs</a>. This change of career path<br />
 				hasn't lessened my interest in software development in the slightest. Here, and on <a href="https://github.com/JonathanJamesStewart">GitHub</a> is<br />
