--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,15 @@
 				<table align="center">
 					<tr>
 						<td>
-							<a title="Eve Market Scanner" href="https://github.com/JonathanJamesStewart/EveMarketScanner"><img src="Images/Eve Project.jpg" /></a>
-							<a title="This Website" href="https://github.com/JonathanJamesStewart/JJSWebsite"><img src="Images/Website.jpg"/></a>
+							<a title="Eve Market Scanner In Python" href="https://github.com/JonathanJamesStewart/EveMarketScanner"><img src="Images/Eve Project.jpg" /></a>
+						</td>
+						<td>
+							<a title="This Website In HTML/CSS" href="https://github.com/JonathanJamesStewart/JJSWebsite"><img src="Images/Website.jpg"/></a>
+						</td>
+					</tr>
+					<tr>
+						<td>
+							<a title="Tic Tac Toe In JavaScript" href="tictactoe.html"><img src="Images/TicTacToe.jpg"/></a>
 						</td>
 					</tr>
 				</table>
