Set up snake game.

--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,9 @@
 						<td>
 							<a title="Tic Tac Toe In JavaScript" href="tictactoe.html"><img src="Images/TicTacToe.jpg"/></a>
 						</td>
+						<td>
+							<a title="Snake in HTML5" href="snake.html"><img src="Images/Snake.jpg" /></a>
+						</td>
 					</tr>
 				</table>
 			</div>
