--- a/snake.html
+++ b/snake.html
@@ -19,6 +19,7 @@
 			
 			<div id="content">
 				<canvas id="canvas" width="450" height="450"></canvas>
+				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 				<script type="text/javascript" src="JS/Snake.js"></script>
 			</div>
 			
