--- a/snake.html
+++ b/snake.html
@@ -3,6 +3,7 @@
 	<head>
 		  <title>Snake!</title>
 		  <link href="styles.css" rel="stylesheet" >
+			<link rel="shortcut icon" href="Images/favicon.ico" />
 	</head>
 	<body>
 		  <div id="header">Jonathan Stewart</div>
