--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>JS Projects</title>
 		<link href="styles.css" rel="stylesheet" >
+		<link rel="shortcut icon" href="Images/favicon.ico" />
 		<script type="text/javascript" src="JS/TicTacToe.js"></script>
 	</head>
 	<body>
