--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>JS Contact</title>
 		<link href="styles.css" rel="stylesheet" >
+			<link rel="shortcut icon" href="Images/favicon.ico" />
 	</head>
 	<body>
 		  <div id="header">Jonathan Stewart</div>
