--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>JS Projects</title>
-		<link href="styles.css" rel="stylesheet" >
+			<title>JS Projects</title>
+			<link href="styles.css" rel="stylesheet" >
+			<link rel="shortcut icon" href="Images/favicon.ico" />
 	</head>
 	<body>
 		  <div id="header">Jonathan Stewart</div>
