--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,8 @@
 				<ul>
 					<li><a href="mailto:jonathanstewart@jonathanstewart.net" subject="Contact From Website">E-Mail</a></li>
 					<li><a href="https://github.com/jonathanjamesstewart">GitHub</a></li>
-					<li><a href="https://www.linkedin.com/in/jonathanjamesstewart">LinkedIn</a>
+					<li><a href="https://www.linkedin.com/in/jonathanjamesstewart">LinkedIn</a></li>
+					<li><a href="https://www.hackerrank.com/jjstewart">Hacker Rank</a></li>
 				</ul>
 			</div>
 			
