--- a/TicTacToe_Test.html
+++ b/TicTacToe_Test.html
@@ -8,9 +8,15 @@
     <meta name="keywords" content="">
     <title></title>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="JS/TicTacToe.js"></script>
-	<script type="text/javascript" src="JS/TicTacToeTests.js"></script>
     <script src="http://code.jquery.com/qunit/qunit-1.18.0.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/TicTacToeTests.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/RuleSet.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/Player.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/GameBoard.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/PlayerTurnManager.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/ModelController.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/PlayerFactory.js"></script>
+	<script type="text/javascript" src="JS/TicTacToe/DisplayAdapter.js"></script>
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
