Added links to documentation and test pages.

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -91,7 +91,9 @@
 				<div id="navigation">
 					<a href="index.html">Home</a>
 		  		<a href="contact.html">Contact</a>
-					<a href="projects.html">Projects</a>
+					<a href="projects.html">Projects</a><br/>
+					<a href="Documentation/TicTacToe_Docs/index.html">Documentation</a>
+					<a href="TicTacToe_Test.html">Tests</a>
 		  	</div>
 			</div>
 	</body>
